# infamousPlugins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: BuildCairo.cmake  BuildFLTK.cmake
plugins/casynth/: CMakeLists.txt  DistrhoPluginInfo.h  casynth.cpp  casynth.hpp  casynth_editor.cpp  casynth_editor.hpp  casynth_ui.fl  cellgrid.h  engine.cpp  engine.hpp  note.cpp  note.hpp  params.cpp  params.hpp  waves.cpp  waves.hpp
plugins/envfollower/: CMakeLists.txt  DistrhoPluginInfo.h  engine.cpp  engine.hpp  envfollower.cpp  envfollower.hpp  params.cpp  params.hpp
plugins/widgets/: widgets_background.hpp
src/ffffltk/: ffffltk_aspect_group.h  ffffltk_background.h  ffffltk_button.h  ffffltk_dial.h  ffffltk_display.h  ffffltk_scope.h  ffffltk_xy.h
